# rust_upscaler

./: Cargo.toml  LICENSE  README.md  build.rs  build_err.txt  compile_errors.txt  err.txt
src/: main.rs
ui/: main.slint
