[package]
name = "rust_upscaler"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "rust_upscaler"

[dependencies]
slint = { version = "1.15.1", features = ["raw-window-handle-06"] }
image = { version = "0.25.1" }
rfd = "0.14.1"
anyhow = "1.0.86"
candle-core = "0.8.2"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Ole"] }
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
ort = { version = "=2.0.0-rc.11", features = ["ndarray", "directml", "half"] }
ndarray = "0.15"
half = "2.4"

[build-dependencies]
slint-build = "1.15.1"
winres = "0.1.12"
winresource = "0.1"

[profile.release]
opt-level = "z"      # 크기 최적화 (s 또는 z)
lto = true           # Link Time Optimization: 미사용 코드 제거
codegen-units = 1    # 병렬 컴파일을 제한하여 최적화 기회 극대화
panic = "abort"      # 패닉 발생 시 스택 추적 정보 제거
strip = true         # 심볼 정보 및 디버그 정보 강제 제거
